<resources>
    <string name="app_name" translatable="false">NuWo</string>
    <string name="cheque_mode" translatable="true">Cheque Mode</string>
    <string name="input_number" translatable="true">Enter Number</string>
    <string name="error_too_large" translatable="true">Uh oh! Number is too large.</string>
    <string name="about" translatable="true">About</string>
    <string name="settings" translatable="true">Settings</string>
    <string name="credit" translatable="true">If you enjoyed the app and wants to see more.\nFollow me on:</string>
    <string name="created_by">created by: Sean Ervinson</string>
    <string name="social_github" translatable="false">/SeanErvinson</string>
    <string name="social_linkedin" translatable="false">/seanervinson</string>
    <string name="social_twitter" translatable="false">\@ASean___</string>
    <string name="application_logo" translatable="false">Application Logo</string>
    <string name="github_image" translatable="false">Github Image</string>
    <string name="linkedin_image" translatable="false">Linkedin Image</string>
    <string name="twitter_image" translatable="false">Twitter Image</string>
    <string name="number" translatable="true">Number:</string>
    <string name="result" translatable="true">Result:</string>
    <string name="settings_letter_case_title" translatable="true">Letter case</string>
    <string name="settings_ads_on" translatable="true">Thank you for supporting me.</string>
    <string name="settings_ads_off" translatable="true">Consider supporting me by enabling.</string>
    <string name="settings_theme_key" translatable="false">enable_dark_theme</string>
    <string name="settings_theme_title" translatable="true">Enable dark theme</string>
    <string name="settings_ads_title" translatable="true">Show ads</string>
    <string name="settings_letter_case_label_camel_case" translatable="true">Camel Case</string>
    <string name="settings_letter_case_label_lower_case" translatable="true">Lower Case</string>
    <string name="settings_letter_case_value_camel_case" translatable="false">camel</string>
    <string name="settings_letter_case_value_lower_case" translatable="false">lower</string>
    <string name="settings_letter_case_default_value" translatable="false">lower</string>
    <string name="settings_ads_key" translatable="false">enable_ads</string>
    <string name="settings_letter_case_key" translatable="false">letter_case</string>
    <string name="action_settings" translatable="true">Settings</string>
</resources>
